@@ -204,7 +204,8 @@ due to the lack of changes.
 .TP
 \fB\-\-package\fR \fIpackage\fR
 This specifies the package name to be used in the new changelog; this
-may only be used in conjunction with the \fB\-\-create\fR option.
+may only be used in conjunction with the \fB\-\-create\fR and
+\fB\-\-increment\fR options.
 .TP
 .BR \-\-nmu ", " \-n
 Increment the Debian release number for a non-maintainer upload by
